# netkeep80-PersistMemoryManager

./: .clang-format  .gitattributes  .gitignore  .gitkeep  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  README.md  phase4.md  phase9.md  plan.md  repo-policy.json
changelog.d/: 20250309_120000_issue149_reorganize_single_headers.md  20260308_000000_issue146_config_rethinking.md  20260308_000000_rewrite_readme.md  20260308_161036_single_header_presets.md  20260309_000000_pstringview.md  20260310_000000_issue170_strip_comments.md  20260310_120000_issue168_deduplication.md  20260312_130000_issue43_phase2_persistence.md  20260321_120000_parray_insert_erase.md  20260411_120000_issue243_free_tree_forest_policy.md  20260412_120000_docs_consistency.md  20260419_131300_validation_entrypoints.md  20260419_182500_issue312_pptr_access_modes.md  20260419_211500_forest_domain_descriptor.md  20260420_093000_issue326_user_ptr_validation.md  20260420_133420_save_manager_snapshot.md  20260420_184500_forest_domain_protocol.md  20260420_203000_pmap_domain_binding.md  20260420_222500_issue339_remove_legacy_root.md  20260420_224148_narrow_block_state_scope.md  20260421_093000_issue352_kernel_compaction.md  20260426_083000_issue354_code_anchors.md  20260426_104500_issue354_anchor_format_guard.md  20260426_120135_issue358_release_generator.md  20260426_140000_issue360_kernel_compaction.md  20260426_150000_issue360_kernel_compaction.md  20260426_151700_issue360_kernel_byte_compaction.md  20260426_170000_issue360_kernel_byte_facade.md  20260427_103720_format_include.md  20260428_120000_issue367_block_header_refactor.md  20260428_120000_issue369_block_header_refactor.md  20260428_120000_issue375_address_layer.md  20260428_143225_limit_local_build_parallelism.md  20260428_154858_arena_internals_refactor.md  20260430_143610_issue_377_requirements_traceability.md  20260501_094500_issue379_normalize_requirements.md
demo/: avl_tree_view.cpp  avl_tree_view.h  demo_app.cpp  demo_app.h  manual_alloc_view.cpp  manual_alloc_view.h  mem_map_view.cpp  metrics_view.cpp  scenario_manager.cpp  scenarios.cpp  scenarios.h  struct_tree_view.cpp  struct_tree_view.h
docs/: MIGRATION_GUIDE.md  PMM_AVL_Forest_Concept.md  annotated.html  api_reference.md  architecture.md  atomic_writes.md  block_and_treenode_semantics.md  bootstrap.md  classes.html  classpmm_1_1PersistMemoryManager-members.html  classpmm_1_1PersistMemoryManager.html  comment_policy.md  compatibility_audit.md  core_invariants.md  deletion_policy.md  diagnostics_taxonomy.md  dir_caccae9e503017ccd94cbef9df68a383.html  files.html  free_tree_forest_policy.md  functions.html  functions_a.html  functions_c.html  functions_e.html  functions_f.html  functions_func.html  functions_func_c.html  functions_func_e.html  functions_func_f.html  functions_func_o.html  functions_func_p.html  functions_func_s.html  functions_func_~.html  functions_i.html  functions_m.html  functions_o.html  functions_p.html  functions_s.html  functions_type.html  functions_vars.html  functions_~.html  (+32 more)
examples/: CMakeLists.txt  basic_usage.cpp  benchmark.cpp  new_api_usage.cpp  persistence_demo.cpp  stress_test.cpp
include/: persist_memory_io.h  persist_memory_manager.h  persist_memory_types.h  pmm_embedded_heap.h  pmm_industrial_db_heap.h  pmm_multi_threaded_heap.h  pmm_single_threaded_heap.h
req/: .catalog-allowlist.json  01_business_requirements.md  02_business_rules.md  03_user_requirements.md  04_features.md  05_functional_requirements.md  06_data_requirements.md  README.md  (+7 more)
(+246 files in other folders)
